tests/NormalTests/paczka1/small_fuzzy/83169361.err
Error in line 8: 8n13PJ7IL A642 70,9
Error in line 4: AsA A611 97,5
